# mini-engine

./: CMakeLists.txt  DOC.md  PERFORMANCES.md  README.md  Types.h  Vector.h  WorldRegistry.cpp  build.sh  main.cpp  testing.cpp
assets/Mech_F_432/Material/: mech_f_432.mtl  mech_f_432.mtl~
assets/shaders/: default_fragment.glsl  default_vertex.glsl
src/: Geometry.h  Platform.cpp  Platform.h  PlatformWIN32.cpp  Str.h  Types.h  Vector.h  WorldRegistry.cpp  WorldRegistry.h  main.cpp  perf.data  testing.cpp
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
